@@ -33,6 +33,8 @@ https://github.com/elastic/beats/compare/v6.4.1...6.4[Check the HEAD diff]
 
 *Filebeat*
 
+- Fix some errors happening when stopping syslog input. {pull}8347[8347]
+
 *Heartbeat*
 
 *Metricbeat*
